// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseMarkdown > another example 1`] = `
{
  "show-install-script": {
    "enabled": true,
    "environments": {
      "production": {
        "conditions": {},
        "enabled": true,
        "name": "production",
      },
    },
    "name": "Show install script",
    "slug": "show-install-script",
  },
  "show-logo": {
    "enabled": true,
    "environments": {
      "development": {
        "conditions": {},
        "enabled": false,
        "name": "development",
      },
      "preview": {
        "conditions": {},
        "enabled": false,
        "name": "preview",
      },
      "production": {
        "conditions": {},
        "enabled": false,
        "name": "production",
      },
    },
    "name": "Show logo",
    "slug": "show-logo",
  },
}
`;

exports[`parseMarkdown > should parse markdown with disabled feature 1`] = `
{
  "feature-1": {
    "enabled": false,
    "environments": {
      "development": {
        "conditions": {},
        "enabled": false,
        "name": "development",
      },
      "preview": {
        "conditions": {},
        "enabled": false,
        "name": "preview",
      },
      "production": {
        "conditions": {},
        "enabled": false,
        "name": "production",
      },
    },
    "name": "Feature 1",
    "slug": "feature-1",
  },
  "feature-2": {
    "enabled": true,
    "environments": {
      "production": {
        "conditions": {},
        "enabled": false,
        "name": "production",
      },
    },
    "name": "Feature 2",
    "slug": "feature-2",
  },
}
`;

exports[`parseMarkdown > should parse markdown with enabled feature 1`] = `
{
  "feature-1": {
    "enabled": true,
    "environments": {
      "development": {
        "conditions": {},
        "enabled": false,
        "name": "development",
      },
      "preview": {
        "conditions": {},
        "enabled": false,
        "name": "preview",
      },
      "production": {
        "conditions": {},
        "enabled": false,
        "name": "production",
      },
    },
    "name": "Feature 1",
    "slug": "feature-1",
  },
  "feature-2": {
    "enabled": true,
    "environments": {
      "production": {
        "conditions": {},
        "enabled": false,
        "name": "production",
      },
    },
    "name": "Feature 2",
    "slug": "feature-2",
  },
}
`;

exports[`parseMarkdown > should parse markdown with one environment enabled 1`] = `
{
  "feature-1": {
    "enabled": false,
    "environments": {
      "development": {
        "conditions": {},
        "enabled": false,
        "name": "development",
      },
      "preview": {
        "conditions": {},
        "enabled": false,
        "name": "preview",
      },
      "production": {
        "conditions": {},
        "enabled": true,
        "name": "production",
      },
    },
    "name": "Feature 1",
    "slug": "feature-1",
  },
  "feature-2": {
    "enabled": false,
    "environments": {
      "production": {
        "conditions": {},
        "enabled": false,
        "name": "production",
      },
    },
    "name": "Feature 2",
    "slug": "feature-2",
  },
}
`;

exports[`parseMarkdown > should parse markdown with two environments enabled in different features 1`] = `
{
  "feature-1": {
    "enabled": false,
    "environments": {
      "development": {
        "conditions": {},
        "enabled": false,
        "name": "development",
      },
      "preview": {
        "conditions": {},
        "enabled": false,
        "name": "preview",
      },
      "production": {
        "conditions": {},
        "enabled": false,
        "name": "production",
      },
    },
    "name": "Feature 1",
    "slug": "feature-1",
  },
  "feature-2": {
    "enabled": true,
    "environments": {
      "preview": {
        "conditions": {},
        "enabled": true,
        "name": "preview",
      },
      "production": {
        "conditions": {},
        "enabled": false,
        "name": "production",
      },
    },
    "name": "Feature 2",
    "slug": "feature-2",
  },
}
`;

exports[`parseMarkdown > should parse valid markdown correctly 1`] = `
{
  "feature-1": {
    "enabled": false,
    "environments": {
      "preview": {
        "conditions": {},
        "enabled": false,
        "name": "preview",
      },
      "production": {
        "conditions": {},
        "enabled": false,
        "name": "production",
      },
    },
    "name": "Feature 1",
    "slug": "feature-1",
  },
}
`;
